@@ -2,20 +2,19 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.dangdang</groupId>
     <artifactId>sharding-jdbc</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
-    
+
     <modules>
         <module>sharding-jdbc-core</module>
     </modules>
-    
+
     <properties>
         <java.version>1.7</java.version>
         <maven.version.range>[3.0.4,)</maven.version.range>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.locale>zh_CN</project.build.locale>
-        
         <lombok.version>1.16.4</lombok.version>
         <guava.version>18.0</guava.version>
         <commons-lang.version>2.6</commons-lang.version>
@@ -25,37 +24,27 @@
         <commons-pool.version>1.6</commons-pool.version>
         <commons-pool2.version>2.3</commons-pool2.version>
         <joda-time.version>2.3</joda-time.version>
-        <aspectj.version>1.8.0</aspectj.version>
         <cglib.version>3.1</cglib.version>
-        <springframework.version>4.1.1.RELEASE</springframework.version>
-        <mybatis.version>3.2.8</mybatis.version>
-        <mybatis-spring.version>1.2.2</mybatis-spring.version>
         <objenesis.version>2.1</objenesis.version>
         <javassist.version>3.18.2-GA</javassist.version>
         <commons-dbcp.version>1.4</commons-dbcp.version>
         <c3p0.version>0.9.1.2</c3p0.version>
         <druid.version>1.0.12</druid.version>
-        <jsqlparser.version>0.9.3</jsqlparser.version>
         <commons-logging.version>1.1.3</commons-logging.version>
         <logback.version>1.1.2</logback.version>
         <slf4j.version>1.7.7</slf4j.version>
         <metrics.version>3.1.0</metrics.version>
-        <jfinal.version>2.0</jfinal.version>
         <groovy.version>2.4.5</groovy.version>
-        
         <mysql-connector-java.version>5.1.30</mysql-connector-java.version>
         <h2.version>1.4.184</h2.version>
-        
         <junit.version>4.12</junit.version>
         <dbunit.version>2.5.0</dbunit.version>
         <unitils.core.version>3.4.2</unitils.core.version>
-        <spring-test-dbunit.version>1.2.1</spring-test-dbunit.version>
         <mockito.version>1.10.19</mockito.version>
-        
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
         <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
         <maven-jar-plugin.version>2.6</maven-jar-plugin.version>
-        <maven-surefire-report-plugin.version>2.18.1</maven-surefire-report-plugin.version>
+        <maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
         <maven-site-plugin.version>3.4</maven-site-plugin.version>
         <lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
         <maven-enforcer-plugin.version>1.4</maven-enforcer-plugin.version>
@@ -73,7 +62,7 @@
         <taglist-maven-plugin.version>2.4</taglist-maven-plugin.version>
         <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
     </properties>
-    
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -122,89 +111,14 @@
                 <version>${joda-time.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.aspectj</groupId>
-                <artifactId>aspectjweaver</artifactId>
-                <version>${aspectj.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>cglib</groupId>
                 <artifactId>cglib</artifactId>
                 <version>${cglib.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-context</artifactId>
-                <version>${springframework.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-core</artifactId>
-                <version>${springframework.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-beans</artifactId>
-                <version>${springframework.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-aspects</artifactId>
-                <version>${springframework.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-aop</artifactId>
-                <version>${springframework.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-jdbc</artifactId>
-                <version>${springframework.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-tx</artifactId>
-                <version>${springframework.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-context-support</artifactId>
-                <version>${springframework.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-web</artifactId>
-                <version>${springframework.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-webmvc</artifactId>
-                <version>${springframework.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-expression</artifactId>
-                <version>${springframework.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.objenesis</groupId>
-                <artifactId>objenesis</artifactId>
-                <version>${objenesis.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.javassist</groupId>
                 <artifactId>javassist</artifactId>
                 <version>${javassist.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.mybatis</groupId>
-                <artifactId>mybatis</artifactId>
-                <version>${mybatis.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.mybatis</groupId>
-                <artifactId>mybatis-spring</artifactId>
-                <version>${mybatis-spring.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-dbcp</groupId>
@@ -226,11 +140,6 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid</artifactId>
                 <version>${druid.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.github.jsqlparser</groupId>
-                <artifactId>jsqlparser</artifactId>
-                <version>${jsqlparser.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-logging</groupId>
@@ -264,24 +173,19 @@
                 <version>${metrics.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.jfinal</groupId>
-                <artifactId>jfinal</artifactId>
-                <version>${jfinal.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.codehaus.groovy</groupId>
                 <artifactId>groovy</artifactId>
                 <version>${groovy.version}</version>
                 <classifier>indy</classifier>
             </dependency>
-            
+
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql-connector-java.version}</version>
                 <scope>runtime</scope>
             </dependency>
-            
+
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
@@ -307,18 +211,6 @@
                 </exclusions>
             </dependency>
             <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-test</artifactId>
-                <version>${springframework.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.github.springtestdbunit</groupId>
-                <artifactId>spring-test-dbunit</artifactId>
-                <version>${spring-test-dbunit.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
                 <version>${mockito.version}</version>
@@ -338,7 +230,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-    
+
     <build>
         <pluginManagement>
             <plugins>
@@ -365,11 +257,9 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-report-plugin</artifactId>
-                    <version>${maven-surefire-report-plugin.version}</version>
+                    <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
-                        <forkMode>once</forkMode>
-                        <argLine>-XX:-UseSplitVerifier</argLine>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -509,6 +399,7 @@
                     <quiet>true</quiet>
                     <format>xml</format>
                     <instrumentation>
+                        <ignoreTrivial>true</ignoreTrivial>
                         <excludes>
                             <exclude>com/dangdang/**/*Test.class</exclude>
                             <exclude>com/dangdang/**/Test*.class</exclude>
@@ -523,7 +414,7 @@
             </plugin>
         </plugins>
     </build>
-    
+
     <reporting>
         <plugins>
             <plugin>
@@ -595,7 +486,7 @@
             </plugin>
         </plugins>
     </reporting>
-    
+
     <repositories>
         <repository>
             <id>henryyan-mavenrepo</id>
@@ -622,30 +513,30 @@
             </releases>
         </repository>
     </repositories>
-    
+
     <url>http://www.dangdang.com</url>
     <description>RDB Sharding</description>
-    <licenses> 
+    <licenses>
         <license>
             <name>Apache Licene 2.0</name>
             <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
-    
+
     <scm>
         <connection>scm:https://github.com/dangdangdotcom/sharding-jdbc</connection>
         <developerConnection>scm:https://github.com/dangdangdotcom/sharding-jdbc</developerConnection>
         <url>https://github.com/dangdangdotcom/sharding-jdbc</url>
     </scm>
-    
+
     <mailingLists>
         <mailingList>
             <name>Zhangliang</name>
             <post>zhangliang@dangdang.com</post>
         </mailingList>
     </mailingLists>
-    
+
     <developers>
         <developer>
             <id>zhangliang</id>
@@ -654,7 +545,7 @@
             <timezone>8</timezone>
         </developer>
     </developers>
-    
+
     <distributionManagement>
         <snapshotRepository>
             <id>sonatype-nexus-snapshots</id>
